@@ -1,3 +1,13 @@
+2012-01-06  Pratik Solanki  <psolanki@apple.com>
+
+        WebKit1 fails to compile with USE(CFNETWORK) and HAVE(NETWORK_CFDATA_ARRAY_CALLBACK)
+        https://bugs.webkit.org/show_bug.cgi?id=75675
+
+        Reviewed by Oliver Hunt.
+
+        * platform/network/cf/ResourceHandleCFNet.cpp:
+        (WebCore::willCacheResponse):
+
 2012-01-06  Abhishek Arya  <inferno@chromium.org>
 
         Crash with range selection across different documents.
